--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">ClickFarmAssistant</string>
+    <string name="title_activity_click_farm_settings">刷单助手</string>
+    <string name="accessibility_service_description">刷单配置</string>
+
+    <!-- Preference Titles -->
+    <string name="recorder_header">录制配置</string>
+    <string name="replay_header">启动配置</string>
+    <string name="record">开始录制</string>
+    <string name="replay">开始回放</string>
+
+    <!-- Record Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Replay Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="float_window_dismiss">STOP</string>
 </resources>
